--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+fastapi
+pydantic
+sqlalchemy
+crud
+models
+database
+authlib
+starlette
 sympy
 numpy
-matplotlib
-scipy
-opencv-python
-pillow
-nltk
-spacy
-chempy
-ase
-pyscf
-chemtools
-ipywidgets
-voila
+chemparse
+openai
+pytesseract
+Pillow
+io
+google-api-python-client
+torch
+torchvision
+ftfy
+regex
+tqdm
+git+https://github.com/openai/CLIP.git
